Fixed ul alignment

--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ html {
     color: black;
   }
   .projects li {
-    list-style: none;
+    /* list-style: none; */
     padding-bottom: 0.25%;
   }
   .project-item {
